<resources>
    <string name="app_name">Bottom Sheet</string>
    <string name="action_settings">Settings</string>

    <string name="order_details">Order Details</string>
    <string name="price">₹435.00</string>
    <string name="fried">Chicken Fried Rice 1x1</string>
    <string name="tikka">Paneer Tikka 1x2</string>
    <string name="address">Delivery Address</string>
    <string name="address1">Flat No 8, Amrapali Apartments</string>
    <string name="payment">Proceed Payment</string>

    <string name="show_bottom_sheet">Show Bottom Sheet</string>
    <string name="show_bottom_sheet_dialog">Show Bottom Sheet Dialog</string>
    <string name="show_bottom_sheet_dialog_fragment">Show Bottom Sheet Dialog Fragment</string>

    <string name="preview">Preview</string>
    <string name="share">Share</string>
    <string name="get_link">Get link</string>
    <string name="make_a_copy">Make a Copy</string>
    <string name="eamil_a_copy">Email a Copy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
